--- a/src/scss/news.scss
+++ b/src/scss/news.scss
@@ -11,7 +11,7 @@
     border-radius: 3px;
     background-color: $white;
     padding: 10px;
-    height: 400px;
+    //height: 400px;
 
     h1{
       @include clear;
@@ -21,5 +21,134 @@
       font-family: 'RobotoRegular', sans-serif;
       text-transform: uppercase;
     }
+
+    .top_article{
+      padding: 10px;
+      width: 100%;
+      height: 400px;
+      position: relative;
+      //cursor: pointer;
+
+      &:hover{
+        .content{
+          top:0px;
+          height: 400px;
+
+          .title{
+
+            border-bottom: 2px dotted $green;
+          }
+          .text{
+            visibility: visible;
+            padding-left: 10px;
+          }
+        }
+      }
+
+      .image{
+        padding: 3px;
+        width: 100%;
+        height: 300px;
+        overflow: hidden;
+        border: 1px solid $grey;
+
+        img{
+          width: 100%;
+          height: 100%;
+        }
+
+      }
+
+      .content{
+        position: absolute;
+        padding: 10px;
+        padding-top: 0px;
+        top: 310px;
+        left: 0;
+        height: 100px;
+        overflow: hidden;
+        background-color:$white;
+        transition: all .8s;
+
+        .title{
+          margin: 0;
+          padding: 5px;
+
+          .date{
+            display: flex;
+            .day{
+              padding-right: 5px;
+            }
+            .month{
+              padding-right: 5px;
+            }
+          }
+
+          h2{
+            @include clear;
+            padding-top: 5px;
+            font-size: 20px;
+            color: darken($grey,20%);
+            height: 50px;
+            overflow: hidden;
+
+            a{
+              color: darken($grey,20%);
+              text-decoration: none;
+
+              &:hover{
+                color: $green;
+              }
+            }
+          }
+        }
+
+        .text{
+          padding: 5px;
+          visibility: hidden;
+          max-height: 230px;
+          overflow: hidden;
+        }
+
+          .link{
+            margin-top: 10px;
+            margin-left: 10px;
+            padding: 5px;
+            padding-left: 10px;
+            background-color:$green;
+            width: 150px;
+            border-radius: 5px;
+            a{
+              display: flex;
+              align-items: center;
+              text-decoration: none;
+              justify-content: space-around;
+              color: $white;
+
+              &:hover{
+                color: $yellow;
+
+                i{
+                  color: $yellow;
+                }
+              }
+
+              i{
+                padding-right: 5px;
+                color: $green-light;
+                font-size: 20px;
+                color: $white;
+              }
+              span{
+                font-size: 16px;
+              }
+            }
+
+          }
+
+
+      }
+    }
+
   }
 }
