--- a/src/css/main.css
+++ b/src/css/main.css
@@ -713,6 +713,111 @@ ul {
               color: #fff; }
             #news .wrap_news .top_article .content .link a span {
               font-size: 16px; }
+    #news .wrap_news .articles {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-justify-content: space-around;
+          -ms-flex-pack: distribute;
+              justify-content: space-around;
+      padding: 10px; }
+      #news .wrap_news .articles .article {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        height: 200px;
+        overflow: hidden;
+        position: relative; }
+        #news .wrap_news .articles .article:hover .art_img {
+          visibility: hidden;
+          top: 100%; }
+        #news .wrap_news .articles .article:hover .art_cont .date {
+          visibility: hidden;
+          top: 100%; }
+        #news .wrap_news .articles .article:hover .art_cont .title {
+          visibility: hidden;
+          top: 100%; }
+        #news .wrap_news .articles .article:hover .art_cont .art_text {
+          visibility: visible;
+          left: 5px;
+          top: 0px; }
+        #news .wrap_news .articles .article:hover .art_cont .link {
+          visibility: visible;
+          top: 160px; }
+        #news .wrap_news .articles .article .art_img {
+          position: absolute;
+          top: 0;
+          left: 5px;
+          padding: 3px;
+          width: 250px;
+          height: 150px;
+          border: 1px solid #43484C;
+          margin-right: 15px;
+          -webkit-transition: all .3s;
+          -o-transition: all .3s;
+          transition: all .3s; }
+          #news .wrap_news .articles .article .art_img img {
+            width: 100%;
+            height: 100%; }
+        #news .wrap_news .articles .article .art_cont {
+          padding: 3px; }
+          #news .wrap_news .articles .article .art_cont .date {
+            position: absolute;
+            top: 0px;
+            left: 270px;
+            font-size: 16px;
+            -webkit-transition: all .3s;
+            -o-transition: all .3s;
+            transition: all .3s; }
+          #news .wrap_news .articles .article .art_cont .title {
+            position: absolute;
+            left: 270px;
+            top: 30px;
+            -webkit-transition: all .3s;
+            -o-transition: all .3s;
+            transition: all .3s; }
+            #news .wrap_news .articles .article .art_cont .title h3 {
+              margin: 0;
+              padding: 0;
+              font-size: 20px; }
+              #news .wrap_news .articles .article .art_cont .title h3 a {
+                color: #131516;
+                text-decoration: none; }
+                #news .wrap_news .articles .article .art_cont .title h3 a:hover {
+                  color: #396B62; }
+          #news .wrap_news .articles .article .art_cont .art_text {
+            padding: 0;
+            position: absolute;
+            top: 100%;
+            left: 5px;
+            visibility: hidden;
+            -webkit-transition: all .5s;
+            -o-transition: all .5s;
+            transition: all .5s;
+            max-height: 160px;
+            overflow: hidden; }
+          #news .wrap_news .articles .article .art_cont .link {
+            margin-top: 5px;
+            position: absolute;
+            top: 100%;
+            left: 5px;
+            visibility: hidden;
+            -webkit-transition: all .5s;
+            -o-transition: all .5s;
+            transition: all .5s; }
+            #news .wrap_news .articles .article .art_cont .link a {
+              text-decoration: none; }
+              #news .wrap_news .articles .article .art_cont .link a:hover {
+                color: #396B62; }
+              #news .wrap_news .articles .article .art_cont .link a i {
+                margin-left: 5px; }
 
 /*==========  Desktop First Method  ==========*/
 /*==========  Mobile First Method  ==========*/
