--- a/src/scss/news.scss
+++ b/src/scss/news.scss
@@ -160,6 +160,7 @@
         height: 200px;
         overflow: hidden;
         position: relative;
+        margin-bottom: 10px;
 
         &:hover {
 
@@ -247,16 +248,20 @@
           }
           .link {
             margin-top: 5px;
+            padding: 5px;
             position: absolute;
             top: 100%;
             left: 5px;
             visibility: hidden;
             transition: all .5s;
+            background-color:$green;
+            border-radius: 3px;
 
             a{
               text-decoration: none;
+              color: $white;
               &:hover{
-                color: $green;
+                color: $yellow;
               }
               i{
                 margin-left: 5px;
