--- a/src/css/main.css
+++ b/src/css/main.css
@@ -819,11 +819,48 @@ ul {
                     border-radius: 3px; }
             #news .wrap_news .articles .article .art_cont .link a {
               text-decoration: none;
-              color: #fff; }
+              color: #fff;
+              display: -webkit-box;
+              display: -webkit-flex;
+              display: -ms-flexbox;
+              display: flex;
+              -webkit-box-align: center;
+              -webkit-align-items: center;
+                  -ms-flex-align: center;
+                      align-items: center; }
               #news .wrap_news .articles .article .art_cont .link a:hover {
                 color: yellow; }
               #news .wrap_news .articles .article .art_cont .link a i {
-                margin-left: 5px; }
+                margin-left: 5px;
+                font-size: 18px; }
+    #news .wrap_news .all_news {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center; }
+      #news .wrap_news .all_news button {
+        padding: 5px 10px;
+        background-color: #396B62;
+        -webkit-border-radius: 5px;
+                border-radius: 5px; }
+        #news .wrap_news .all_news button:hover {
+          color: yellow;
+          -webkit-box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
+                  box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12); }
+          #news .wrap_news .all_news button:hover a {
+            color: yellow; }
+        #news .wrap_news .all_news button a {
+          color: #fff; }
+          #news .wrap_news .all_news button a:hover {
+            color: yellow; }
 
 /*==========  Desktop First Method  ==========*/
 /*==========  Mobile First Method  ==========*/
