--- a/src/scss/news.scss
+++ b/src/scss/news.scss
@@ -212,6 +212,7 @@
           padding: 3px;
 
           .date {
+            opacity: .7;
             position: absolute;
             top: 0px;
             left: 220px;
