Добавлена структура и файл стилей для блока ссылок

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,8 @@
 /*==========  Desktop First Method  ==========*/
 /*==========  Mobile First Method  ==========*/
+
+/*==========  Desktop First Method  ==========*/
+/*==========  Mobile First Method  ==========*/
 #header .header_content {
   background-color: #4EC698;
   width: 100%;
