--- a/src/scss/news.scss
+++ b/src/scss/news.scss
@@ -11,6 +11,7 @@
     border-radius: 3px;
     background-color: $white;
     padding: 10px;
+    margin-bottom: 10px;
     //height: 400px;
 
     h1 {
