--- a/src/css/main.css
+++ b/src/css/main.css
@@ -33,6 +33,71 @@
 
 /*==========  Desktop First Method  ==========*/
 /*==========  Mobile First Method  ==========*/
+#footer {
+  padding-top: 10px;
+  background-color: #1d1d1d;
+  padding-bottom: 20px; }
+  #footer .wrap_footer {
+    margin-top: 10px;
+    margin-bottom: 20px;
+    background-color: #43484C;
+    border-bottom: 1px dashed #fff;
+    border-top: 1px dashed #fff; }
+    #footer .wrap_footer .foot_block {
+      padding: 10px;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      color: #fff; }
+      #footer .wrap_footer .foot_block img {
+        width: 200px;
+        margin-left: 30px; }
+      #footer .wrap_footer .foot_block h3 {
+        color: #4EC698;
+        margin-bottom: 10px; }
+      #footer .wrap_footer .foot_block p {
+        color: #fff; }
+      #footer .wrap_footer .foot_block i {
+        color: #4EC698;
+        font-size: 22px;
+        margin-right: 20px; }
+      #footer .wrap_footer .foot_block i.fa.fa-envelope-o {
+        font-size: 16px;
+        margin-right: 15px; }
+      #footer .wrap_footer .foot_block span {
+        color: yellow; }
+      #footer .wrap_footer .foot_block ul {
+        padding: 10px; }
+        #footer .wrap_footer .foot_block ul li {
+          margin-bottom: 10px; }
+  #footer .all_reserve {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+    #footer .all_reserve p {
+      color: #fff; }
+    #footer .all_reserve img {
+      width: 32px;
+      height: 32px;
+      margin-right: 20px; }
+
+/*==========  Desktop First Method  ==========*/
+/*==========  Mobile First Method  ==========*/
 #header .header_content {
   background-color: #4EC698;
   width: 100%;
