--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -33,7 +33,7 @@
         color: $white;
       }
       i{
-        color: lighten($green-light,15%);
+        color: $green3;
         font-size: 22px;
         margin-right: 20px;
       }
