Добавлена переменная бирюзового цвета

--- a/src/scss/partitions/_variables.scss
+++ b/src/scss/partitions/_variables.scss
@@ -5,6 +5,7 @@ $green: #396B62 ;
 $green-light: #4EC698;
 $green2: #449d44;
 $green3:#06fc23;
+$marine:#33FFCC;
 $white: #fff;
 $blue:#31B0D5;
 $black:#1d1d1d;
