--- a/src/css/main.css
+++ b/src/css/main.css
@@ -64,7 +64,7 @@
       #footer .wrap_footer .foot_block p {
         color: #fff; }
       #footer .wrap_footer .foot_block i {
-        color: #06fc23;
+        color: #33FFCC;
         font-size: 22px;
         margin-right: 20px; }
       #footer .wrap_footer .foot_block i.fa.fa-envelope-o {
