--- a/src/css/main.css
+++ b/src/css/main.css
@@ -778,13 +778,14 @@ ul {
           visibility: hidden;
           max-height: 230px;
           overflow: hidden; }
+          #news .wrap_news .top_article .content .text a {
+            color: #4EC698; }
         #news .wrap_news .top_article .content .link {
           margin-top: 10px;
           margin-left: 10px;
-          padding: 5px;
-          padding-left: 10px;
+          padding: 3px;
           background-color: #396B62;
-          width: 150px;
+          width: 130px;
           -webkit-border-radius: 5px;
                   border-radius: 5px; }
           #news .wrap_news .top_article .content .link a {
@@ -808,7 +809,7 @@ ul {
             #news .wrap_news .top_article .content .link a i {
               padding-right: 5px;
               color: #4EC698;
-              font-size: 20px;
+              font-size: 16px;
               color: #fff; }
             #news .wrap_news .top_article .content .link a span {
               font-size: 16px; }
@@ -906,7 +907,7 @@ ul {
             overflow: hidden; }
           #news .wrap_news .articles .article .art_cont .link {
             margin-top: 5px;
-            padding: 5px;
+            padding: 3px;
             position: absolute;
             top: 100%;
             left: 5px;
@@ -915,8 +916,11 @@ ul {
             -o-transition: all .8s;
             transition: all .8s;
             background-color: #396B62;
-            -webkit-border-radius: 3px;
-                    border-radius: 3px; }
+            -webkit-border-radius: 5px;
+                    border-radius: 5px;
+            width: 130px;
+            -webkit-box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
+                    box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12); }
             #news .wrap_news .articles .article .art_cont .link a {
               text-decoration: none;
               color: #fff;
@@ -927,12 +931,15 @@ ul {
               -webkit-box-align: center;
               -webkit-align-items: center;
                   -ms-flex-align: center;
-                      align-items: center; }
+                      align-items: center;
+              -webkit-justify-content: space-around;
+                  -ms-flex-pack: distribute;
+                      justify-content: space-around; }
               #news .wrap_news .articles .article .art_cont .link a:hover {
                 color: yellow; }
               #news .wrap_news .articles .article .art_cont .link a i {
                 margin-left: 5px;
-                font-size: 18px; }
+                font-size: 16px; }
     #news .wrap_news .all_news {
       display: -webkit-box;
       display: -webkit-flex;
