настроены стрелки на кнопках в модуле новостей

--- a/src/scss/news.scss
+++ b/src/scss/news.scss
@@ -139,10 +139,12 @@
             }
 
             i {
+              margin-top: 3px;
               padding-right: 5px;
               color: $green-light;
               font-size: 16px;
               color: $white;
+
             }
             span {
               font-size: 16px;
@@ -275,6 +277,7 @@
                 color: $yellow;
               }
               i{
+                margin-top: 3px;
                 margin-left: 5px;
                 font-size: 16px;
               }
