--- a/src/scss/slider.scss
+++ b/src/scss/slider.scss
@@ -15,26 +15,32 @@
     @include shadow_block;
     overflow: hidden;
     margin-bottom: 10px;
-    @include devices-max-width-768px{
-      margin-left: -15px;
-      margin-right: -15px;
-    }
 
     .owl-carousel{
-      margin-left: 25px;
+      margin-left: 51px;
       margin-top: 4px;
+      width: 1022px;
 
       @include devices-max-width-1200px{
-        margin-left: 40px;
+        margin-left: 80px;
+        width: 751px;
       }
       @include devices-max-width-992px{
-        margin-left: 62px;
+        margin-left: 120px;
+        width: 500px;
+
       }
       @include devices-max-width-480px{
         margin-left: 120px;
       }
       @include devices-max-width-320px{
         margin-left: 40px;
+      }
+
+      .owl-item {
+        @include devices-max-width-1200px{
+          //margin-right: 40px !important;
+        }
       }
     }
 
