--- a/src/css/main.css
+++ b/src/css/main.css
@@ -532,10 +532,10 @@ ul {
             text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6); }
             @media only screen and (max-width: 1200px) {
               #header .navbar .wrapper_nav > ul > li a {
-                font-size: 14px; } }
+                font-size: 16px; } }
             @media only screen and (max-width: 992px) {
               #header .navbar .wrapper_nav > ul > li a {
-                font-size: 12px; } }
+                font-size: 14px; } }
             #header .navbar .wrapper_nav > ul > li a:hover, #header .navbar .wrapper_nav > ul > li a.active {
               color: yellow; }
           #header .navbar .wrapper_nav > ul > li.active {
@@ -556,10 +556,10 @@ ul {
               cursor: pointer; }
               @media only screen and (max-width: 1200px) {
                 #header .navbar .wrapper_nav > ul > li.dropdown span {
-                  font-size: 14px; } }
+                  font-size: 16px; } }
               @media only screen and (max-width: 992px) {
                 #header .navbar .wrapper_nav > ul > li.dropdown span {
-                  font-size: 12px; } }
+                  font-size: 14px; } }
               #header .navbar .wrapper_nav > ul > li.dropdown span:hover {
                 color: yellow; }
             #header .navbar .wrapper_nav > ul > li.dropdown i {
@@ -807,6 +807,7 @@ ul {
               #news .wrap_news .top_article .content .link a:hover i {
                 color: yellow; }
             #news .wrap_news .top_article .content .link a i {
+              margin-top: 3px;
               padding-right: 5px;
               color: #4EC698;
               font-size: 16px;
@@ -938,6 +939,7 @@ ul {
               #news .wrap_news .articles .article .art_cont .link a:hover {
                 color: yellow; }
               #news .wrap_news .articles .article .art_cont .link a i {
+                margin-top: 3px;
                 margin-left: 5px;
                 font-size: 16px; }
     #news .wrap_news .all_news {
@@ -985,19 +987,18 @@ ul {
             box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
     overflow: hidden;
     margin-bottom: 10px; }
-    @media only screen and (max-width: 768px) {
-      #slider .slider_wrapper {
-        margin-left: -15px;
-        margin-right: -15px; } }
     #slider .slider_wrapper .owl-carousel {
-      margin-left: 25px;
-      margin-top: 4px; }
+      margin-left: 51px;
+      margin-top: 4px;
+      width: 1022px; }
       @media only screen and (max-width: 1200px) {
         #slider .slider_wrapper .owl-carousel {
-          margin-left: 40px; } }
+          margin-left: 80px;
+          width: 751px; } }
       @media only screen and (max-width: 992px) {
         #slider .slider_wrapper .owl-carousel {
-          margin-left: 62px; } }
+          margin-left: 120px;
+          width: 500px; } }
       @media only screen and (max-width: 480px) {
         #slider .slider_wrapper .owl-carousel {
           margin-left: 120px; } }
