--- a/src/css/main.css
+++ b/src/css/main.css
@@ -475,7 +475,8 @@ ul {
         -webkit-justify-content: center;
             -ms-flex-pack: center;
                 justify-content: center;
-        padding-bottom: 2px; }
+        padding-bottom: 2px;
+        margin-left: 5px; }
         @media only screen and (max-width: 1200px) {
           #header .navbar .wrapper_nav .home_icon {
             font-size: 20px; } }
