--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -60,6 +60,7 @@
         align-items: center;
         justify-content: center;
         padding-bottom: 2px;
+        margin-left: 5px;
         @include devices-max-width-1200px {
           font-size: 20px;
         }
