--- a/src/scss/partitions/_mixins.scss
+++ b/src/scss/partitions/_mixins.scss
@@ -18,10 +18,12 @@
 
 //Тени
 @mixin shadow_block{
-  box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
+  //box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12);
+  box-shadow: 0 10px 20px -12px rgba(0, 0, 0, 0.42), 0 3px 20px 0 rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
 }
 
 @mixin shadow_text{
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+    text-shadow: 1px 3px 5px rgba(0, 0, 0, 0.6);
+  //text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
 }
 
