--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -3,279 +3,211 @@
 @import "partitions/media";
 
 #header {
-  .header_content{
-    background-color:$green-light;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    //height: 200px;
+  .wrap_header{
+    background-color: $green-light;
 
-    .wrap_site_info{
+    .container{
       display: flex;
       flex-direction: column;
-      align-items: center;
-      padding-bottom: 20px;
-      @include devices-max-width-768px{
-        padding-bottom: 0px;
-        margin-top: -10px;
-      }
 
-      h1 {
-        color: $white;
-        font-size: 72px;
-        font-family: 'RobotoBold', sans-serif;
-        font-weight: bold;
-        @include shadow_text;
-        @include devices-max-width-1200px{
-          font-size: 66px;
-        }
-        @include devices-max-width-992px{
-          font-size: 62px;
-          margin-top: 15px;
-        }
-
-      }
-      .phone{
-        color: $yellow;
+      .header_content{
         display: flex;
         align-items: center;
-        @include shadow_text;
-        @include devices-max-width-1200px{
-          margin-top: -7px;
-        }
-        @include devices-max-width-992px{
-          margin-top: -10px;
-        }
+        justify-content: flex-start;
+        flex-wrap: wrap;
 
-        i{
-          font-size: 22px;
-          margin-right: 10px;
-          @include devices-max-width-1200px{
-            font-size: 18px;
-            margin-right: 8px;
-          }
-        }
-        span{
-          font-size: 18px;
-          font-weight: bold;
-          @include devices-max-width-1200px{
-            font-size: 16px;
-          }
-        }
-      }
-    }
-
-    .wrap_slogan_info{
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      padding-top: 10px;
-
-      h3{
-        color: $white;
-        font-size: 28px;
-        font-weight: bold;
-        @include shadow_text;
-        @include devices-max-width-1200px{
-          font-size: 26px;
-        }
-        @include devices-max-width-992px{
-          font-size: 24px;
-          padding-top: 0px;
-          margin-top: 15px;
-        }
-        @include devices-max-width-768px{
-          margin-top: 0px;
-          text-align: center;
-          font-size: 20px;
-        }
-      }
-      span{
-        color: $yellow;
-        margin-left: -180px;
-        margin-top: 7px;
-        @include shadow_text;
-        font-size: 18px;
-
-        @include devices-max-width-1200px{
-          margin-left: -115px;
-          margin-top: -3px;
-          font-size: 16px;
-        }
-        @include devices-max-width-992px{
-          margin-left: 0px;
-        }
-        @include devices-max-width-768px{
-          text-align: center;
-          font-size: 14px;
-        }
-      }
-    }
-
-    .battons{
-      margin-top: 25px;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
-      @include devices-max-width-768px{
-        margin-top: 5px;
-      }
-
-      a {
-        text-decoration: none;
-        font-size:20px;
-        background-color: $green;
-        margin: 5px;
-        padding: 7px;
-        border-radius: 3px;
-        color: $white;
-        text-align: center;
-        display: block;
-        float: right;
-        cursor: pointer;
-        border: 1px solid $white;
-        width: 75%;
-        @include shadow_block;
-        @include shadow_text;
-
-        @include devices-max-width-1200px{
-          font-size:18px;
-          margin: 4px;
-          padding: 6px;
-        }
-        @include devices-max-width-992px{
-          font-size:16px;
-          margin: 3px;
-          padding: 5px;
-          width: 100%;
-        }
-
-        &:hover{
-          color: $yellow;
-          border: 1px solid $yellow;
-        }
-
-        i {
-          padding-right: 5px;
-          font-size: 22px;
-
-          @include devices-max-width-992px{
-            font-size:18px;
-          }
-        }
-      }
-    }
-    .wrap_panel{
-      display: block;
-      background-color: darken($grey,5%);
-      margin: 10px 15px;
-      margin-top: -10px;
-      padding: 5px;
-      height: 40px;
-      border-radius: 3px;
-      border: 1px solid $white;
-      @include shadow_block;
-      @include devices-max-width-1200px{
-        height: 35px;
-      }
-
-      .search{
-        padding-left: 5px;
-        margin-right: -17px;
-        margin-top: -6px;
-
-        .input-group{
-          border: 1px solid $yellow;
-          border-radius: 3px;
-          position: relative;
-
-          i {
-            position: absolute;
-            left: 10px;
-            top: 5px;
-            z-index: 100;
-            color: $green-light;
-            font-size: 24px;
-            @include devices-max-width-1200px{
-              top: 3px;
-              font-size: 20px;
-            }
-          }
-
-          input{
-            padding-left: 40px;
-            padding-top: 10px;
-            width: 100%;
-            height: 30px;
-            border-bottom-left-radius: 3px;
-            border-top-left-radius: 3px;
-            @include devices-max-width-1200px{
-              height: 25px;
-              padding-left: 30px;
-              padding-top: 0px;
-              padding-bottom: 0px;
-              font-size: 14px;
-            }
-
-          }
-          button{
-            height: 30px;
-            background-color:$green;
-            border-bottom-right-radius: 3px;
-            border-top-right-radius: 3px;
-            @include devices-max-width-1200px{
-              height: 25px;
-              padding-top: 3px;
-            }
-
-            &:hover{
-              color: $yellow;
-              @include shadow_text;
-            }
-          }
-        }
-      }
-      .wrap_run_str{
-        display: flex;
-        align-items: center;
-        height: 40px;
-        margin-top: -8px;
-        @include devices-max-width-1200px{
-          margin-top: -11px;
-        }
-
-        .icons{
-          color: $white;
-          margin-right: 10px;
+        .logo{
           display: flex;
+          flex-direction: column;
           align-items: center;
-          margin-left: -10px;
+          justify-content: center;
+          width: 240px;
 
-          .sm{
-            margin-right: -7px;
+          h1{
+            @include clear;
+            color: $white;
+            font-size: 92px;
+            font-family: RobotoBold,sans-serif;
+            @include shadow_text;
           }
+          .phone{
+            display: flex;
+            align-items: center;
+            color: $yellow;
+            @include shadow_text;
+            font-size: 20px;
+            font-family: Roboto, sans-serif;
 
-          .fa-2x{
-            color: $green-light;
-          }
-          .fa-lg{
-            margin-left: -6px;
+            i{
+              font-size:24px;
+              margin-right: 10px;
+            }
           }
         }
-        .run_str{
-          color: $green3;
+
+        .site_title{
+          display: flex;
+          flex-direction: column;
+          margin-left: 20px;
+          width: 500px;
+
+          h2{
+            @include clear;
+            color: $white;
+            font-size: 32px;
+            font-family: Roboto, sans-serif;
+            @include shadow_text;
+          }
 
           span{
             color: $yellow;
-            margin-right: 10px;
-            text-transform: uppercase;
+            font-size: 18px;
+            padding-top: 2px;
+            @include shadow_text;
+          }
+        }
+
+        .buttons{
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: flex-end;
+          width: 200px;
+          margin-left: auto;
+          margin-bottom: -45px;
+
+          a{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            background-color: $green;
+            border: 1px solid $white;
+            border-radius: 3px;
+            color: $white;
+            text-decoration: none;
+            padding: 5px;
+            margin-bottom: 10px;
+            font-size:20px;
+            @include shadow_text;
+            @include shadow_block;
+
+            &:hover{
+              color: $yellow;
+              border: 1px solid $yellow;
+            }
+
+            i{
+              margin-right: 10px;
+              font-size: 22px;
+            }
           }
 
+        }
+      }
+
+      .meta_info{
+        display: flex;
+        align-items: center;
+        margin-top: -5px;
+
+        .phone{
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 240px;
+          color: $yellow;
+          font-size: 20px;
+          @include shadow_text;
+
+          i{
+            font-size:24px;
+            margin-right: 10px;
+          }
+        }
+
+        .slogan{
+          color: $yellow;
+          font-size: 20px;
+          @include shadow_text;
+          margin-left: 20px;
+        }
+      }
+
+      .panel{
+        display: flex;
+        align-items: center;
+        background-color: $grey;
+        margin-top: 10px;
+        padding: 2px;
+        height: 40px;
+        border: 1px solid $white;
+        border-radius: 3px;
+        @include shadow_block;
+
+        .icons{
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 50px;
+
+          i{
+            color: $white;
+
+            &.fa-chevron-right{
+              font-size:16px;
+              margin-right: -7px;
+            }
+
+            &.fa-2x{
+              font-size: 32px;
+              color: $green-light;
+              margin-right: -5px;
+            }
+
+            &.fa-lg{
+              font-size:18px ;
+            }
+          }
+        }
+
+        .run_string{
+          color: $green3;
+          width: 600px;
+          font-size: 22px;
+        }
+
+        .search{
+          margin-left:auto;
+          display: flex;
+          align-items: center;
+          border: 2px solid $green-light;
+          border-radius: 3px;
+          background-color: $white;
+
+          i{
+            margin-left: 5px;
+            margin-right: 5px;
+            font-size: 20px;
+            color: $green-light;
+          }
+          input{
+            border: none;
+          }
+          button{
+            background-color:$green;
+            border: 1px solid $green-light;
+            border-radius: 3px;
+            color: $white;
+
+            &:hover{
+              color: $yellow;
+              border: 1px solid $yellow;
+            }
+
+          }
         }
       }
     }
   }
-
-
 }
