--- a/src/scss/partitions/_variables.scss
+++ b/src/scss/partitions/_variables.scss
@@ -1,8 +1,8 @@
 //Цвета
 $grey: #43484C;
 $yellow: yellow;
-$green: #396B62 ;
-$green-light: #4EC698;
+$green: #396B62; //$grey;
+$green-light: #4EC698; //#99CCCC;
 $green2: #449d44;
 $green3:#06fc23;
 $marine:#33FFCC;
